fixed box and overflow scroll

--- a/style.css
+++ b/style.css
@@ -367,33 +367,23 @@ div.nav-menu > ul {
 
 #large-navigation
 {
-	position: absolute;
+	position: fixed;
 	top: 0px;
+	bottom: 0px;
 	width: 100%;
-	height: auto;
+	height: 100%;
 	background-color: rgba( 24, 24, 34, 0.95 );
 	display: none;
 	color: #ffffff;
 	min-height: 100%;
 	z-index: 100;
-	overflow: hidden;
+	overflow-y:scroll;
+    overflow-x:hidden;
 }
 
 #large-navigation *
 {
 	color: #cccccc;
-}
-
-#large-navigation:before
-{
-	content: "";
-	display: block;
-	background-color: rgb( 24, 24, 34 );
-	width: 50%;
-	height: 100%;
-	position: absolute;
-	top: 0;
-	right: 0;
 }
 
 #large-navigation .site-title
